crates/server/tests/grammar/snapshots/r#mod__grammar__alpha040__dollar_dollar.snap
---
source: tests/grammar/alpha040.rs
expression: "compiler.tokenize(\"$$\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "$",
        ),
        1..2,
    ),
]
