crates/server/tests/grammar/snapshots/r#mod__grammar__alpha040__double_dollar_whitespace.snap
---
source: tests/grammar/alpha040.rs
expression: "compiler.tokenize(\"$$ \\n\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "$",
        ),
        1..2,
    ),
]
