crates/server/tests/grammar/snapshots/r#mod__grammar__alpha040__empty_string.snap
---
source: tests/grammar/alpha040.rs
expression: "compiler.tokenize(r#\"\"\"\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "\"",
        ),
        1..2,
    ),
]
