crates/server/tests/grammar/snapshots/r#mod__grammar__alpha040__just_dollar.snap
---
source: tests/grammar/alpha040.rs
expression: "compiler.tokenize(\"$\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
]
